--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,146 +1,172 @@
-footer{    
+footer {
+  padding-bottom: 10px;
+  background: white;
+  width: 100%;
+}
+
+.footer {
+  padding: 40px;
+  display: flex;
+  gap: 10px;
+}
+
+.middle {
+  display: flex;
+  width: 600px;
+  gap: 50px;
+  justify-content: space-between;
+}
+
+.footer-logo {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-logo img {
+  height: 110px;
+}
+
+.connect-with-us {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+}
+
+.connect-with-us h3 {
+  text-transform: uppercase;
+}
+
+.social-logos {
+  margin-top: 10px;
+  display: flex;
+  gap: 7px;
+  align-items: center;
+  justify-content: center;
+}
+
+.social-logos img {
+  width: 30px;
+  height: 30px;
+}
+
+.social-logos:hover {
+  cursor: pointer;
+}
+
+.about-us,
+.contact-us {
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
+}
+
+.about-us {
+  width: 300px;
+}
+
+.about-us h3 {
+  /* text-align: center; */
+  font-size: 25px;
+  font-weight: 500;
+  text-transform: uppercase;
+  margin-bottom: 0;
+  /* border-bottom: 3px solid black; */
+}
+
+.about-us p {
+  text-align: justify;
+  font-size: 18px;
+}
+
+.contact-us h3 {
+  font-size: 25px;
+  font-weight: 500;
+  text-transform: uppercase;
+  margin-bottom: 0;
+  /* border-bottom: 3px solid black; */
+}
+
+.contact-us p {
+  /* margin: 0; */
+  text-align: left;
+  font-size: 18px;
+}
+
+.copyright {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  font-weight: bold;
+}
+
+.copyright div {
+  width: 550px;
+  padding-top: 10px;
+  border-top: 2px solid #4f4d4d;
+}
+
+@media (max-width: 500px) {
+  .footer {
+    gap: 40px;
+  }
+
+  .middle {
+    gap: 50px;
     width: 100%;
-    position: static;
-    bottom: 0;
-    background: rgb(255, 255, 255);
-    color: #181616;
-    padding: 100px 0 30px;
-    font-size: 20px;
-    height: 500px;
-    line-height: 20px;
-    overflow: hidden;
+  }
 
-}
-.footer-box{
-    background-color: rgb(255, 255, 255);
-}
-
-
-.row{
-    width:85%;
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    justify-content: space-between;
-    color: black;
-}
-.col
-{
-    flex-basis: 25%;
-    padding :10px;
-   color: black;
-}
-.col:nth-child(2),.col:nth-child(3)
-{
-    flex-basis: 15%;
-    color: black;
-}
-.logo
-{
-    width: 60%;
-    margin-bottom: 30px;
-}
-.col h3{
-    font-family : 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    width: fit-content;
-    margin-bottom: 40px;
-    position: relative;
-}
-.emailid{
-    width: fit-content;
-    border-bottom: 1px solid #ccc;
-    margin: 20px 0;
-}
-
-ul li{
-    list-style: none;
-    margin-bottom: 16px;
-    padding-left: 0px;
-}
-ul li a{
-    text-decoration: none;
-    color: #0e0c0c;
-}
-.social-links .fa-brands{
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 40px;
-    font-size: 20px;
-    color: #0f0e0e;
-    margin-right: 15px;
-    cursor: pointer;
-}
-hr{
-    width: 90%;
-    border: 0;
-    border-bottom: 1px solid #ccc;
-    margin: 20px auto;
-
-}
-.copy
-{
-    text-align: center;
-}
-.underline{
+  .about-us p,
+  .contact-us p {
     width: 100%;
-    height: 5px;
-    background: #767676;
-    border-radius: 3px;
-    position: absolute;
-    top: 25px;
-    left: 0;
-    overflow: hidden;
-}
-.underline span{
-    width: 15px;
-    height: 100%;
-    background: #fff;
-    border-radius: 3px;
-    position: absolute;
-    top: 0;
-    left: 10px;
-    animation: moving 2s linear infinite;
-}
-@keyframes moving{
-    0%{
-        left: -20%;
-    }
-    100%
-    {
-        left: 100%;
-    }
+  }
 }
 
+@media (min-width: 481px) and (max-width: 820px) {
+  .footer {
+    /* flex-wrap: wrap; */
+    flex-direction: column;
+  }
 
-@media (max-width:700px)
-{
-    footer{
-        bottom: unset;
-    }
-    .col
-{
-    flex-basis: 100%;
+  .middle {
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
 
-}
-.col:nth-child(2),.col:nth-child(3)
-{
-    flex-basis: 15%;
-}
-}
-ul{
-    padding-left: 0%;
-}
-p{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  .about-us,
+  .contact-us {
+    flex: 1;
+  }
 }
 
-li{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+@media (max-width: 280px) {
+  .footer-logo img {
+    height: 90px;
+  }
 }
 
-.no{
-    display: inline;
+@media (max-width: 480px) {
+  .footer {
+    flex-direction: column;
+  }
+
+  .middle {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .about-us {
+    word-wrap: break-word;
+  }
+
+  .container {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
