media query issue resolved in sponsor

--- a/src/Components/Sponsors/Sponsors.css
+++ b/src/Components/Sponsors/Sponsors.css
@@ -74,7 +74,7 @@
   }
 }
 
-@media (max-width: 900px) {
+@media (max-width: 900px) and (min-width: 800px) {
   .sponsor-heading {
     font-size: 60px;
     text-align: center;
